# drone_simulator_pkgs

./: README.md
data_set/: accel_mocap_vs_odom.py  angular_vel_model_comparison.py  fit_imu_noise_model.py  hgdo_regression.py  train_motor_sparse_gpr.py  train_rpm_to_odom.py  train_system_sparse_gpr.py
data_set/2026_05_05_free_flight/01_leveled_marker/: metadata.yaml
data_set/2026_05_05_free_flight/01_sim/: metadata.yaml
data_set/2026_05_05_free_flight/02_ct_1p255/: metadata.yaml
data_set/2026_05_05_free_flight/02_sim_pure_2nd_order/: metadata.yaml
data_set/2026_05_05_free_flight/03_eps_f_0p30/: metadata.yaml
data_set/2026_05_05_free_flight/04_Kd_1p0_eps_f_0p1/: metadata.yaml
data_set/2026_05_05_free_flight/04_Kd_1p5_eps_f_0p1/: metadata.yaml
data_set/2026_05_05_free_flight/04_Kd_2p5_eps_f_0p1/: metadata.yaml
data_set/2026_05_05_free_flight/04_Kp_0p1_eps_f_0p10/: metadata.yaml
data_set/2026_05_13_sim_flight/01_sim/: metadata.yaml
data_set/2026_05_13_sim_flight/02_sim/: metadata.yaml
data_set/2026_05_15_free_flight/eps_tau_0p1/01_data/: metadata.yaml
data_set/2026_05_20_sim_issue/: angular_dynamics_analysis.py  compare_real_vs_sim.py  zoom_takeoff.py
data_set/2026_05_20_sim_issue/01_issue/: 01_issue_0.db3  metadata.yaml
data_set/trained_models/: angular_vel_sparse_gpr.pth  imu_noise_model.npz  motor_sparse_gpr.pth  system_sparse_gpr.pth
drone_bringup/: CMakeLists.txt  package.xml
drone_bringup/config/: hil_mavros.yaml  px4_mavros.yaml  ros_gz_bridge_s550.yaml  ros_gz_bridge_s550_attitude.yaml  ros_gz_bridge_s550_px4.yaml  s550.rviz
drone_bringup/launch/: s550_att_test_pivot_high.launch.py  s550_attitude_test.launch.py  s550_attitude_test_pivot.launch.py  s550_empty_first_order.launch.py  s550_empty_hil.launch.py  s550_empty_second_order.launch.py  s550_hil_actuator.launch.py  s550_px4_sitl.launch.py  s550_yaw_test_pivot.launch.py
drone_description/: CMakeLists.txt  package.xml  setup.py
drone_description/models/S550/: model.config  model.sdf
drone_description/models/att_model/: att_model.sdf  model.config
drone_gazebo/: CMakeLists.txt  package.xml
drone_gazebo/src/: angular_damping_plugin.cpp
drone_gazebo/worlds/: S550_att_test_pivot_high_world.sdf  S550_attitude_test_pivot_world.sdf  S550_attitude_test_world.sdf  S550_empty_world.sdf  S550_yaw_test_pivot_world.sdf
ros_motor_model/: CMakeLists.txt  package.xml
ros_motor_model/config/: first_order_motor.yaml  second_order_motor.yaml
ros_motor_model/include/model/: first_order_motor_model.cpp  first_order_motor_model.hpp  second_order_motor_model.cpp  second_order_motor_model.hpp
ros_motor_model/include/ode_solver/: ode_rk4_solver.hpp
ros_motor_model/include/ros_motor_model/: hil_motor_model.cpp  hil_motor_model.hpp  ros_first_order_motor_model.cpp  ros_first_order_motor_model.hpp  ros_second_order_motor_model.cpp  ros_second_order_motor_model.hpp
ros_motor_model/include/utils/: converter_def.h  type_def.h
ros_motor_model/src/: hil_motor_model_node.cpp  ros_first_order_motor_model_node.cpp  ros_second_order_motor_model_node.cpp
ros_sensor_noise/: CMakeLists.txt  README.md  package.xml
ros_sensor_noise/config/: delay.yaml  noise.yaml  noise_hil.yaml  noise_hil_att.yaml
ros_sensor_noise/include/ros_sensor_noise/: att_odom_publisher.cpp  att_odom_publisher.hpp  gz_hil_bridge.cpp  gz_hil_bridge.hpp  ros_odom_delay_node.cpp  ros_odom_delay_node.hpp  ros_odom_noise_generator.cpp  ros_odom_noise_generator.hpp
ros_sensor_noise/launch/: odom_noise.launch.py
ros_sensor_noise/src/: att_odom_main.cpp  delay_main.cpp  hil_bridge_main.cpp  main.cpp
